# bbml

./: .gitignore  README.md  pyproject.toml
bbml/: __init__.py  debug.py  registries.py
bbml/core/: __init__.py  constants.py  data_transform.py  datapipe.py  finetuner.py  foundation.py  interfaces.py  logging.py  registry.py  run_interface.py  trainer.py
bbml/core/datamodels/: __init__.py  configs.py
bbml/core/utils/: __init__.py  config_compose.py  debug.py  loss_accumulator.py  ramp.py
bbml/data/: __init__.py  transforms.py
bbml/data/datasets/: __init__.py  wikitext.py
bbml/evaluation/: __init__.py  base_eval_lm.py
bbml/finetuners/: __init__.py  lora.py
bbml/finetuners/basis_sharing/: modules.py
bbml/foundations/: __init__.py
bbml/foundations/gpt2/: __init__.py  datamodels.py  evaluation.py  gpt2_foundation.py  model.py
bbml/foundations/qwen_image/: __init__.py  activation_record.py  data_transforms.py  datamodels.py  finetuner.py  qwen_foundation.py  sampling.py
bbml/foundations/qwen_image/models/: __init__.py  attention_processors.py  autoencoder_kl_qwenimage.py  pipeline_qwenimage_edit_plus.py  transformer_qwenimage.py
bbml/logger/: __init__.py  logger.py
bbml/logger/backends/: clearml_backend.py  tensorboard_backend.py  wandb_backend.py
bbml/logging/: __init__.py  logger.py  utils.py
bbml/logging/backends/: __init__.py  clearml_backend.py  tensorboard_backend.py  wandb_backend.py
bbml/train/: __init__.py  datamodels.py  lr_schedulers.py  optimizers.py  simple_trainer.py
bbml/utils/: __init__.py  seed.py  serialize.py  storage.py
configs/qwen_image/: base.yaml
examples/: eval_gpt2.py  train_gpt2.py
examples/gpt2/: eval_gpt2.py  gpt2.yaml
examples/qwen_image/: train.py
template/: .gitignore  README.md  pyproject.toml  rename.py  rename.sh
template/configs/: base.yaml
template/configs/experiments/: example.yaml  example_compiled.yaml
template/configs/training/: example.yaml  example_compiled.yaml
template/myproject/: __init__.py  datamodels.py  finetuner.py  foundation.py  registries.py
template/myproject/data/: __init__.py  datasets.py  transforms.py
template/myproject/experiments/: __init__.py  base.py  example_experiments.py  registry.py
template/myproject/finetuners/: __init__.py
template/myproject/foundations/: __init__.py  example_foundation.py
template/myproject/optimizers/: __init__.py
template/myproject/reporting/: __init__.py  datamodels.py  figures.py
template/scripts/: list_experiments.py  run_experiment.py  run_multi.py  run_training.py
template/tests/: __init__.py  conftest.py  test_registrations.py
tests/: test_config_compose.py  test_datapipe.py  test_registry.py  test_trainer_config.py
