[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bbml"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "torchvision",
    "accelerate",
    "einops",
    "pillow",
    "safetensors",
    "transformers",
    "diffusers",
    "numpy",
    "pydantic",
    "peft",
    "wandb",
    "python-dotenv",
    "torchao",
    "PyYAML",
    "matplotlib",
    "pandas",
    "tqdm",
    "tiktoken",
    "datasets",
    "lm_eval[hf]",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["bbml*"]
namespaces = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=bbml --cov-report=term-missing"
